--- a/wp-content/themes/fipradotcom/sass/mixins/_mixins-master.scss
+++ b/wp-content/themes/fipradotcom/sass/mixins/_mixins-master.scss
@@ -35,3 +35,12 @@
   padding:0;
   cursor: pointer;
 }
+
+//Vertical align elements to centre of parent
+@mixin vertical-align {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
