--- a/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
@@ -34,6 +34,7 @@
     color: $color__fipra-blue-gray;
     @include transition(all 0.2s);
     &:hover {
+      opacity:0.7;
       border: 1px solid $color__fipra-blue;
       color: $color__fipra-blue;
     }
