--- a/wp-content/themes/fipradotcom/sass/layout/_footer.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_footer.scss
@@ -5,10 +5,6 @@
   border-top:1px solid darken($color__fipra-light-gray, 25%);
   border-bottom:5px solid $color__fipra-blue-gray;
 
-  @include media($media__xlarge) {
-    margin-top:$v-rhythm * 2;
-  }
-
   #footer-global-network {
     text-align: center;
     font-family: $font__sans;
@@ -54,7 +50,6 @@
   @include clearfix;
   font-family:$font__sans;
   color:lighten($color__fipra-blue-gray, 45%);
-  background-color: lighten($color__fipra-blue-gray, 10%);
   @include linear-gradient(lighten($color__fipra-blue-gray, 5%) 0%, $color__fipra-blue-gray 100%);
 
   h5 { color:lighten($color__fipra-blue-gray, 30%); }
@@ -81,10 +76,9 @@
   footer {
     @include row();
     @include outer-container($container__outer-width);
-    padding:$v-rhythm 40px;
-    @include media($media__xlarge) {
-      padding:$v-rhythm 0;
-    }
+    padding:$v-rhythm em(20px);
+    @include media($media__xlarge) { padding:$v-rhythm 0; }
+    @include media($media__small) { padding:$v-rhythm em(40px); }
 
     .footer-section {
       @include span-columns(12);
@@ -114,7 +108,7 @@
     }
     @include row();
     color:lighten($color__fipra-blue-gray, 35%);
-    padding:$v-rhythm 40px $v-rhythm * 2;
+    padding:$v-rhythm 20px $v-rhythm * 2;
     @include outer-container($container__outer-width);
     @include media($media__xlarge) {
       padding:$v-rhythm 0 $v-rhythm * 2;
