--- a/wp-content/themes/fipradotcom/sass/layout/_header.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_header.scss
@@ -16,8 +16,8 @@
 
 #header-container {
   @include clearfix;
-//  @include linear-gradient(white 90%, darken(white, 5%) 100%);
-  @include linear-gradient(darken(white, 3%) 90%, darken(white, 5%) 100%);
+  @include linear-gradient(white 90%, darken(white, 5%) 100%);
+//  @include linear-gradient(darken(white, 3%) 90%, darken(white, 5%) 100%);
   &.with-border { border-top:$color__fipra-blue solid $v-rhythm / 2; }
 
   header.site-header {
