--- a/wp-content/themes/fipradotcom/sass/pages/_unit.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_unit.scss
@@ -1,6 +1,7 @@
 #page-banner {
   &.unit {
-    @include media(max-width $media__small) { background:$color__fipra-blue !important; }
+    min-height:em(420px);
+    //    @include media(max-width $media__small) { background:$color__fipra-blue !important; }
 
     #page-banner-content {
       text-align: center;
@@ -29,9 +30,6 @@
         h1 { color: $color__fipra-blue !important; text-shadow:0px 1px 1px $color__fipra-light-gray !important; }
         h2 { color: $color__fipra-blue; }
         .meta { color:black; }
-        img {
-          box-shadow:0 0 5px 2px rgba(black, 0.2);
-        }
         .btn.primary {
           text-shadow:0px 1px 3px lighten($color__fipra-blue, 10%);
         }
@@ -49,21 +47,6 @@
 }
 
   #secondary {
-    .sidebar-contact {
-      @include clearfix;
-      @include border-top-radius(4px);
-      @include border-bottom-radius(4px);
-      margin-bottom:$v-rhythm;
-      background-color: lighten($color__fipra-light-gray, 5%);
-      @include linear-gradient(lighten($color__fipra-light-gray, 6%) 40%, lighten($color__fipra-light-gray, 3%) 100%);
-      padding:$v-rhythm em(12px);
-      @include media($media__medium) { margin-right:em(-40px); padding:$v-rhythm em(52px) $v-rhythm em(12px); }
-
-      img {
-        @include media($media__medium) { max-width:100px; }
-      }
-    }
-
     ul.country-list {
       list-style-type: none;
       font-family: $font__sans;
@@ -73,8 +56,9 @@
         .country-list-flag { width: em(24px); height:em(16px); margin-right:em(5px); }
 
         a { display:block; padding:$v-rhythm / 4 em(12px); background-color: lighten($color__fipra-light-gray, 5%);
-          @include linear-gradient(lighten($color__fipra-light-gray, 6%) 40%, lighten($color__fipra-light-gray, 3%) 100%);
+          @include linear-gradient(lighten($color__fipra-light-gray, 5%) 80%, lighten($color__fipra-light-gray, 0%) 100%);
           @include border-top-radius(4px); @include border-bottom-radius(4px);
+          border-bottom:1px solid darken($color__fipra-light-gray, 7%);
           &:hover { background-color: $color__fipra-light-gray; }
         }
       }
